# news-service

./: .gitignore  ChangeLog.md  LICENSE  README.md  db_schema.sql  development.conf  news-service.cabal  news-service.conf.default  news-service.default.conf  package.yaml  stack.yaml  test_data.sql
app/: Config.hs  CreateHandlers.hs  Database.hs  Handlers.hs  Main.hs  RouterConfigurationHandle.hs  WaiUtil.hs  Web.hs
app/Config/: IO.hs
app/Database/: ConnectionManager.hs
app/Gateway/: News.hs
app/Handler/: News.hs
app/Logger/: Impl.hs
app/Network/Wai/: Util.hs
app/Web/: Application.hs  Exception.hs  JSONEncoder.hs
app/Web/Handler/: News.hs
bench/: Main.hs
bench/Web/: QueryParameterBench.hs
curl_scripts/: README.md  create_author  create_category  create_comment  create_draft  create_draft_from_news  create_draft_with_invalid_image_url  create_draft_with_invalid_tag_id  create_draft_with_minimum_fields  create_draft_with_url_of_unknown_image  create_tag  create_user_with_avatar  create_user_with_bad_avatar_content_type  create_user_with_last_name_only  create_user_without_avatar  delete_author  delete_category  delete_comment  delete_draft  delete_tag  delete_user  get_author  get_authors  get_categories  get_category  get_comment  get_comments  get_draft  get_drafts  get_drafts_of_news_article  get_image  get_news  get_news_list  get_tag  get_tags  get_user  get_users  patch_author  patch_category  patch_draft  (+5 more)
documentation/: API.md  code-and-architecture.md
migrations/: 0003.sql  0004.sql  0005.sql  0006.sql  0007.sql  0008.sql  0009.sql  0010.sql  0011.sql  0012.sql  0013.sql  0014.sql  0015.sql  0016.sql  0017.sql  0018.sql  0019.sql  0020.sql  0021.sql  0022.sql  0023.sql  0024.sql  0025.sql  1.sql  2.sql
scripts/: lint
src/: Config.hs  Database.hs  Logger.hs  Router.hs
src/Control/Exception/: Sync.hs
src/Core/: Authentication.hs  Author.hs  Authorization.hs  AuthorizationNG.hs  Category.hs  Comment.hs  Deletable.hs  EntityId.hs  ExactConversion.hs  Exception.hs  Image.hs  ImageValidator.hs  News.hs  Pagination.hs  Permission.hs  Tag.hs  User.hs
src/Core/Authentication/: Impl.hs
src/Core/Authorization/: Impl.hs
src/Core/DTO/: Image.hs  User.hs
src/Core/Interactor/: CreateAuthor.hs  CreateCategory.hs  CreateComment.hs  CreateDraft.hs  CreateDraftFromNews.hs  CreateTag.hs  CreateUser.hs  DeleteAuthor.hs  DeleteCategory.hs  DeleteComment.hs  DeleteDraft.hs  DeleteTag.hs  DeleteUser.hs  GetAuthor.hs  GetAuthors.hs  GetCategories.hs  GetCategory.hs  GetComment.hs  GetCommentsForNews.hs  GetDraft.hs  GetDrafts.hs  GetDraftsOfNewsArticle.hs  GetImage.hs  GetNews.hs  GetNewsList.hs  GetTag.hs  GetTags.hs  GetUser.hs  GetUsers.hs  PublishDraft.hs  UpdateAuthor.hs  UpdateCategory.hs  UpdateDraft.hs  UpdateTag.hs
src/Core/Pagination/: Impl.hs
src/Data/ByteString/: Util.hs
src/Data/Either/: Util.hs
src/Data/IORef/: Util.hs
src/Data/Int/: Exact.hs
src/Data/Integral/: Exact.hs
src/Data/Maybe/: Util.hs
src/Data/Text/: Show.hs
src/Database/: Authors.hs  Authors.hs-boot  Categories.hs  Columns.hs  ConnectionManager.hs  Images.hs  NativeSQLDecodable.hs  News.hs  Pagination.hs  Tags.hs  Users.hs
src/Database/Logic/: Authors.hs  Authors.hs-boot  Categories.hs  Comments.hs  Images.hs  News.hs  Pagination.hs  Tags.hs  Users.hs
src/Database/Service/: Columns.hs  ConnectionManager.hs  Exception.hs  Exception.hs-boot  NativeSQLDecodable.hs  Primitives.hs  SQLBuilder.hs  SQLBuilders.hs  SchemaVersion.hs  Transaction.hs
src/FrontEnd/: Wai.hs
src/Gateway/: Authors.hs  Categories.hs  CurrentTime.hs  Images.hs  News.hs  SecretToken.hs  Tags.hs  Users.hs
src/Interactor/: GetNews.hs
src/Logger/: Impl.hs
src/Network/Wai/: Util.hs
src/Web/: AppURI.hs  AppURL.hs  Application.hs  BasicAuth.hs  Credentials.hs  EntryPoint.hs  Exception.hs  HTTP.hs  JSONEncoder.hs  PathParameter.hs  Presenter.hs  QueryParameter.hs  RepresentationBuilder.hs  RequestBodyLoader.hs  Response.hs  Router.hs  RouterConfiguration.hs  Types.hs
src/Web/Entity/: Base64.hs  User.hs
src/Web/Handler/: CreateAuthor.hs  CreateCategory.hs  CreateComment.hs  CreateDraft.hs  CreateDraftFromNews.hs  CreateTag.hs  CreateUser.hs  DeleteAuthor.hs  DeleteCategory.hs  DeleteComment.hs  DeleteDraft.hs  DeleteTag.hs  DeleteUser.hs  GetAuthor.hs  GetAuthors.hs  GetCategories.hs  GetCategory.hs  GetComment.hs  GetCommentsForNews.hs  GetDraft.hs  GetDrafts.hs  GetDraftsOfNewsArticle.hs  GetImage.hs  GetNews.hs  GetNewsList.hs  GetTag.hs  GetTags.hs  GetUser.hs  GetUsers.hs  PatchAuthor.hs  PatchCategory.hs  PatchDraft.hs  PatchTag.hs  PostCreateUser.hs  PublishDraft.hs  UpdateCategory.hs
src/Web/Presenter/: Author.hs  Error.hs  User.hs  UserPresenter.hs
src/Web/QueryParameter/: PageQuery.hs
src/Web/Representation/: AppURI.hs  Author.hs  Base64.hs  Category.hs  Comment.hs  Draft.hs  Image.hs  News.hs  OneOf.hs  Tag.hs  User.hs
test/: RouterSpec.hs
test/Core/: AuthenticationSpec.hs  AuthenticationStubs.hs  AuthorizationSpec.hs  ExactConversionSpec.hs  ImageValidatorSpec.hs  PaginationSpec.hs  Stubs.hs
test/Core/Authentication/: Fakes.hs  ImplSpec.hs  Test.hs
test/Core/Authorization/: ImplSpec.hs  Test.hs
test/Core/Interactor/: CreateAuthorSpec.hs  CreateCategorySpec.hs  CreateCommentSpec.hs  CreateDraftFromNewsSpec.hs  CreateDraftSpec.hs  CreateTagSpec.hs  CreateUserSpec.hs  DeleteAuthorSpec.hs  DeleteCategorySpec.hs  DeleteCommentSpec.hs  DeleteDraftSpec.hs  DeleteTagSpec.hs  DeleteUserSpec.hs  GetAuthorSpec.hs  GetAuthorsSpec.hs  GetCategoriesSpec.hs  GetCommentsForNewsSpec.hs  GetDraftSpec.hs  GetDraftsOfNewsArticleSpec.hs  GetDraftsSpec.hs  GetNewsListSpec.hs  GetNewsSpec.hs  GetTagsSpec.hs  GetUsersSpec.hs  PublishDraftSpec.hs  UpdateAuthorSpec.hs  UpdateCategorySpec.hs  UpdateDraftSpec.hs  (+1 more)
test/Gateway/: SecretTokenSpec.hs
test/Test/: AsyncExpectation.hs
test/Web/: AppURISpec.hs  AppURLSpec.hs  BasicAuthSpec.hs  CredentialsSpec.hs  QueryParameterSpec.hs  RouterSpec.hs
test_scripts/: README.md  get_news  prefix.sh  unsupported_method_news  unsupported_url
(+15 files in other folders)
