cabal-version: 1.12

name:           news-service
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/aoriens/news-service#readme>
homepage:       https://github.com/aoriens/news-service#readme
bug-reports:    https://github.com/aoriens/news-service/issues
author:         Anton Kalinin
maintainer:     aoriens@gmail.com
copyright:      (c) Anton Kalinin
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/aoriens/news-service

library
  exposed-modules:
    Control.Exception.Sync
    , Core.Authentication
    , Core.Authentication.Impl
    , Core.Author
    , Core.Authorization
    , Core.Authorization.Impl
    , Core.Category
    , Core.EntityId
    , Core.Exception
    , Core.Image
    , Core.Interactor.CreateAuthor
    , Core.Interactor.CreateCategory
    , Core.Interactor.CreateUser
    , Core.Interactor.DeleteAuthor
    , Core.Interactor.DeleteUser
    , Core.Interactor.GetAuthor
    , Core.Interactor.GetAuthors
    , Core.Interactor.GetCategory
    , Core.Interactor.GetImage
    , Core.Interactor.GetNews
    , Core.Interactor.GetUser
    , Core.Interactor.GetUsers
    , Core.Interactor.UpdateAuthor
    , Core.News
    , Core.Pagination
    , Core.Pagination.Impl
    , Core.Permission
    , Core.User
    , Data.ByteString.Util
    , Data.Either.Util
    , Data.Integral.Exact
    , Database
    , Database.Authors
    , Database.Categories
    , Database.Columns
    , Database.ConnectionManager
    , Database.Images
    , Database.NativeSQLDecodable
    , Database.News
    , Database.Pagination
    , Database.Users
    , Gateway.Authors
    , Gateway.Categories
    , Gateway.CurrentTime
    , Gateway.Images
    , Gateway.News
    , Gateway.SecretToken
    , Gateway.Users
    , Logger
    , Logger.Impl
    , Network.Wai.Util
    , Web.AppURI
    , Web.Application
    , Web.BasicAuth
    , Web.Credentials
    , Web.Exception
    , Web.HTTP
    , Web.Handler.CreateAuthor
    , Web.Handler.CreateCategory
    , Web.Handler.CreateUser
    , Web.Handler.DeleteAuthor
    , Web.Handler.DeleteUser
    , Web.Handler.GetAuthor
    , Web.Handler.GetAuthors
    , Web.Handler.GetCategory
    , Web.Handler.GetImage
    , Web.Handler.GetNews
    , Web.Handler.GetUser
    , Web.Handler.GetUsers
    , Web.Handler.PatchAuthor
    , Web.JSONEncoder
    , Web.Presenter
    , Web.QueryParameter
    , Web.QueryParameter.PageQuery
    , Web.Representation.Author
    , Web.Representation.Base64
    , Web.Representation.Category
    , Web.Representation.News
    , Web.Representation.User
    , Web.RepresentationBuilder
    , Web.RequestBodyLoader
    , Web.Response
    , Web.Router
    , Web.Types
    , Web.Types.Internal.SessionId
  hs-source-dirs:
      src
  build-depends:
      aeson
    , aeson-pretty
    , base >=4.7 && <5
    , base64
    , bytestring
    , cryptonite
    , deepseq
    , dlist
    , exceptions
    , hasql
    , hasql-th
    , hasql-transaction
    , http-types
    , memory
    , mtl
    , network
    , postgresql-error-codes
    , profunctors
    , stm
    , text
    , time
    , transformers
    , unordered-containers
    , vector
    , wai
    , warp
  default-language: Haskell2010
  default-extensions: OverloadedStrings RecordWildCards NamedFieldPuns

executable news-service-exe
  main-is: Main.hs
  other-modules:
      Config
    , Config.IO
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , async
    , base >=4.7 && <5
    , bytestring
    , configurator
    , http-types
    , news-service
    , text
    , time
    , transformers
    , unordered-containers
    , wai
    , warp
  default-language: Haskell2010
  default-extensions: OverloadedStrings RecordWildCards NamedFieldPuns

test-suite news-service-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Core.Authentication.ImplSpec
    , Core.Authentication.Test
    , Core.Authorization.ImplSpec
    , Core.Authorization.Test
    , Core.Interactor.CreateAuthorSpec
    , Core.Interactor.CreateUserSpec
    , Core.Interactor.DeleteAuthorSpec
    , Core.Interactor.DeleteUserSpec
    , Core.Interactor.GetAuthorSpec
    , Core.Interactor.GetAuthorsSpec
    , Core.Interactor.GetNewsSpec
    , Core.Interactor.UpdateAuthorSpec
    , Core.Pagination.ImplSpec
    , Data.Integral.ExactSpec
    , Gateway.SecretTokenSpec
    , Web.AppURISpec
    , Web.BasicAuthSpec
    , Web.CredentialsSpec
    , Web.QueryParameterSpec
    , Web.RouterSpec
  hs-source-dirs:
      test
  ghc-options: -rtsopts
  build-depends:
      base >=4.7 && <5
    , base64
    , bytestring
    , deepseq
    , hspec
    , http-types
    , network-uri
    , news-service
    , QuickCheck
    , text
    , time
    , unordered-containers
    , wai
  default-language: Haskell2010
  default-extensions: OverloadedStrings RecordWildCards NamedFieldPuns

benchmark news-service-bench
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
    Web.QueryParameterBench
  hs-source-dirs:
      bench
  ghc-options: -rtsopts -O2
  build-depends:
      base >=4.7 && <5
    , bytestring
    , criterion
    , news-service
  default-language: Haskell2010
  default-extensions: OverloadedStrings RecordWildCards NamedFieldPuns
