cabal-version: 1.12

name:           news-service
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/aoriens/news-service#readme>
homepage:       https://github.com/aoriens/news-service#readme
bug-reports:    https://github.com/aoriens/news-service/issues
author:         Anton Kalinin
maintainer:     aoriens@gmail.com
copyright:      (c) Anton Kalinin
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/aoriens/news-service

library
  exposed-modules:
    Control.Exception.Sync
    , Core.Authentication
    , Core.Authentication.Impl
    , Core.Author
    , Core.Authorization
    , Core.AuthorizationNG
    , Core.Authorization.Impl
    , Core.Category
    , Core.Comment
    , Core.Deletable
    , Core.EntityId
    , Core.Exception
    , Core.Image
    , Core.ImageValidator
    , Core.Interactor.CreateAuthor
    , Core.Interactor.CreateCategory
    , Core.Interactor.CreateComment
    , Core.Interactor.CreateDraft
    , Core.Interactor.CreateTag
    , Core.Interactor.CreateUser
    , Core.Interactor.DeleteAuthor
    , Core.Interactor.DeleteCategory
    , Core.Interactor.DeleteComment
    , Core.Interactor.DeleteDraft
    , Core.Interactor.DeleteTag
    , Core.Interactor.DeleteUser
    , Core.Interactor.GetAuthor
    , Core.Interactor.GetAuthors
    , Core.Interactor.GetCategories
    , Core.Interactor.GetCategory
    , Core.Interactor.GetComment
    , Core.Interactor.GetCommentsForNews
    , Core.Interactor.GetDraft
    , Core.Interactor.GetDrafts
    , Core.Interactor.GetImage
    , Core.Interactor.GetNews
    , Core.Interactor.GetNewsList
    , Core.Interactor.GetTag
    , Core.Interactor.GetTags
    , Core.Interactor.GetUser
    , Core.Interactor.GetUsers
    , Core.Interactor.PublishDraft
    , Core.Interactor.UpdateAuthor
    , Core.News
    , Core.Pagination
    , Core.Pagination.Impl
    , Core.Permission
    , Core.Tag
    , Core.User
    , Data.ByteString.Util
    , Data.Either.Util
    , Data.Integral.Exact
    , Data.IORef.Util
    , Database
    , Database.Logic.Authors
    , Database.Logic.Categories
    , Database.Logic.Comments
    , Database.Logic.Images
    , Database.Logic.News.Create
    , Database.Logic.News.Delete
    , Database.Logic.News.Exists
    , Database.Logic.News.Filter
    , Database.Logic.News.Get
    , Database.Logic.News.GetDraftAuthor
    , Database.Logic.Pagination
    , Database.Logic.Tags
    , Database.Logic.Users
    , Database.Service.Columns
    , Database.Service.ConnectionManager
    , Database.Service.NativeSQLDecodable
    , Database.Service.Primitives
    , Database.Service.SQLBuilder
    , Database.Service.SQLBuilders
    , FrontEnd.Wai
    , Gateway.CurrentTime
    , Gateway.SecretToken
    , Logger
    , Logger.Impl
    , Web.AppURI
    , Web.Application
    , Web.Application.Internal.ResponseReceived
    , Web.Application.Internal.SessionId
    , Web.BasicAuth
    , Web.Credentials
    , Web.EntryPoint
    , Web.Exception
    , Web.HTTP
    , Web.Handler.CreateAuthor
    , Web.Handler.CreateCategory
    , Web.Handler.CreateComment
    , Web.Handler.CreateDraft
    , Web.Handler.CreateTag
    , Web.Handler.CreateUser
    , Web.Handler.DeleteAuthor
    , Web.Handler.DeleteCategory
    , Web.Handler.DeleteComment
    , Web.Handler.DeleteDraft
    , Web.Handler.DeleteTag
    , Web.Handler.DeleteUser
    , Web.Handler.GetAuthor
    , Web.Handler.GetAuthors
    , Web.Handler.GetCategories
    , Web.Handler.GetCategory
    , Web.Handler.GetComment
    , Web.Handler.GetCommentsForNews
    , Web.Handler.GetDraft
    , Web.Handler.GetDrafts
    , Web.Handler.GetImage
    , Web.Handler.GetNews
    , Web.Handler.GetNewsList
    , Web.Handler.GetTag
    , Web.Handler.GetTags
    , Web.Handler.GetUser
    , Web.Handler.GetUsers
    , Web.Handler.PatchAuthor
    , Web.Handler.PublishDraft
    , Web.JSONEncoder
    , Web.Presenter
    , Web.QueryParameter
    , Web.QueryParameter.PageQuery
    , Web.Representation.AppURI
    , Web.Representation.Author
    , Web.Representation.Base64
    , Web.Representation.Category
    , Web.Representation.Comment
    , Web.Representation.Draft
    , Web.Representation.Image
    , Web.Representation.News
    , Web.Representation.OneOf
    , Web.Representation.Tag
    , Web.Representation.User
    , Web.RepresentationBuilder
    , Web.RequestBodyLoader
    , Web.Response
    , Web.Router
  hs-source-dirs:
      src
  build-depends:
      aeson
    , aeson-pretty
    , base >=4.7 && <5
    , base64
    , bytestring
    , containers
    , cryptonite
    , deepseq
    , dlist
    , exceptions
    , hashable
    , hasql
    , hasql-th
    , http-types
    , memory
    , mtl
    , network
    , network-uri
    , postgresql-error-codes
    , profunctors
    , stm
    , text
    , time
    , transformers
    , unordered-containers
    , vector
    , wai
    , warp
  default-language: Haskell2010
  default-extensions: OverloadedStrings RecordWildCards NamedFieldPuns LambdaCase

executable news-service-exe
  main-is: Main.hs
  other-modules:
      Config
    , Config.IO
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , async
    , base >=4.7 && <5
    , bytestring
    , configurator
    , http-types
    , news-service
    , text
    , time
    , transformers
    , unordered-containers
    , wai
    , warp
  default-language: Haskell2010
  default-extensions: OverloadedStrings RecordWildCards NamedFieldPuns LambdaCase

test-suite news-service-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Core.Authentication.ImplSpec
    , Core.Authentication.Test
    , Core.Authorization.ImplSpec
    , Core.Authorization.Test
    , Core.ImageValidatorSpec
    , Core.Interactor.CreateAuthorSpec
    , Core.Interactor.CreateCategorySpec
    , Core.Interactor.CreateCommentSpec
    , Core.Interactor.CreateDraftSpec
    , Core.Interactor.CreateTagSpec
    , Core.Interactor.CreateUserSpec
    , Core.Interactor.DeleteAuthorSpec
    , Core.Interactor.DeleteCategorySpec
    , Core.Interactor.DeleteCommentSpec
    , Core.Interactor.DeleteDraftSpec
    , Core.Interactor.DeleteTagSpec
    , Core.Interactor.DeleteUserSpec
    , Core.Interactor.GetAuthorSpec
    , Core.Interactor.GetAuthorsSpec
    , Core.Interactor.GetCategoriesSpec
    , Core.Interactor.GetCommentsForNewsSpec
    , Core.Interactor.GetDraftSpec
    , Core.Interactor.GetDraftsSpec
    , Core.Interactor.GetNewsListSpec
    , Core.Interactor.GetTagsSpec
    , Core.Interactor.GetUsersSpec
    , Core.Interactor.PublishDraftSpec
    , Core.Interactor.UpdateAuthorSpec
    , Core.Pagination.ImplSpec
    , Core.Pagination.Test
    , Core.Stubs
    , Data.Integral.ExactSpec
    , Gateway.SecretTokenSpec
    , Test.AsyncExpectation
    , Web.AppURISpec
    , Web.BasicAuthSpec
    , Web.CredentialsSpec
    , Web.QueryParameterSpec
    , Web.RouterSpec
  hs-source-dirs:
      test
  ghc-options: -rtsopts
  build-depends:
      base >=4.7 && <5
    , base64
    , bytestring
    , deepseq
    , hspec
    , http-types
    , network-uri
    , news-service
    , QuickCheck
    , text
    , time
    , unordered-containers
  default-language: Haskell2010
  default-extensions: OverloadedStrings RecordWildCards NamedFieldPuns LambdaCase

benchmark news-service-bench
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
    Web.QueryParameterBench
  hs-source-dirs:
      bench
  ghc-options: -rtsopts -O2
  build-depends:
      base >=4.7 && <5
    , bytestring
    , criterion
    , news-service
  default-language: Haskell2010
  default-extensions: OverloadedStrings RecordWildCards NamedFieldPuns LambdaCase
